# intern

./: .gitignore  .travis.yml  CHANGELOG.markdown  LICENSE  README.markdown  intern.cabal
.github/workflows/: haskell-ci.yml
Data/: Interned.hs
Data/ByteString/: Interned.hs
Data/Interned/: ByteString.hs  IntSet.hs  Internal.hs  String.hs  Text.hs
Data/Interned/Internal/: ByteString.hs  String.hs  Text.hs
Data/String/: Interned.hs
examples/: LICENSE  Term.hs  intern-examples.cabal
