name:          intern
category:      Data, Data Structures
version:       0.2.0
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/intern/
copyright:     Copyright (C) 2011 Edward A. Kmett
synopsis:      Efficient hash-consing for arbitrary data types
description:   Efficient hash-consing for arbitrary data types
build-type:    Simple

source-repository head
  type: git
  location: git://github.com/ekmett/intern.git

library
  build-depends: 
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    unordered-containers >= 0.1.4 && < 0.2,
    hashable >= 1.1.2 && < 1.2

  exposed-modules:
    Data.Interned
    Data.Interned.Internal
    Data.ByteString.Interned
    Data.String.Interned

  ghc-options: -Wall 
