name:          intern-examples
category:      Data, Data Structures
version:       0.1
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/intern/
bug-reports:   http://github.com/ekmett/intern/issues
copyright:     Copyright (C) 2011-2014 Edward A. Kmett
build-type:    Simple
tested-with:   GHC == 7.0.4
             , GHC == 7.2.2
             , GHC == 7.4.2
             , GHC == 7.6.3
             , GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.1
synopsis:      An example program using @intern@
description:   An example program using @intern@.

source-repository head
  type: git
  location: git://github.com/ekmett/intern.git

library
  build-depends:
    base                 >= 4     && < 5,
    hashable             >= 1.1   && < 1.3,
    intern

  exposed-modules: Term
  ghc-options: -Wall
